--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <center>
       <div>
-        <canvas id="loadingCanvas" oncontextmenu="event.preventDefault()"></canvas>
+        <canvas id="loadingCanvas" oncontextmenu="event.preventDefault()" width="1920" height="1080"></canvas>
         <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
       </div>
     </center>
@@ -45,7 +45,7 @@
         loadingContext.fillText(text, canvas.scrollWidth / 2, canvas.scrollHeight / 2);
 
         loadingContext.fillText("Powered By Emscripten.", canvas.scrollWidth / 2, canvas.scrollHeight / 4);
-        loadingContext.fillText("Powered By LÖVE.", canvas.scrollWidth / 2, canvas.scrollHeight / 4 * 3);
+        loadingContext.fillText("Powered By LÖVE & love.js.", canvas.scrollWidth / 2, canvas.scrollHeight / 4 * 3);
       }
 
       window.onload = function () { window.focus(); };
@@ -104,7 +104,7 @@
     <script type="text/javascript" src="game.js"></script>
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
     <footer>
-      <p>Built with <a href="https://github.com/Davidobot/love.js">love.js</a> <button onclick="goFullScreen();">Go Fullscreen</button></p>
+      <p><button onclick="goFullScreen();">Go Fullscreen</button></p>
     </footer>
   </body>
 </html>
