Toggle behaviour of fullscreen button

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <script type="text/javascript" src="game.js"></script>
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
     <footer>
-      <p><button onclick="goFullScreen();">Go Fullscreen</button></p>
+      <p><button onclick="FullScreenHook(); goFullScreen();">Go Fullscreen</button></p>
     </footer>
   </body>
 </html>
