--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <center>
       <div>
         <canvas id="loadingCanvas" oncontextmenu="event.preventDefault()" width="1920" height="1080"></canvas>
-        <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+        <canvas id="canvas" oncontextmenu="event.preventDefault()" width="1920" height="1080"></canvas>
       </div>
     </center>
 
@@ -104,7 +104,7 @@
     <script type="text/javascript" src="game.js"></script>
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
     <footer>
-      <p><button onclick="FullScreenHook(); goFullScreen();">Go Fullscreen</button></p>
+      <p><button onclick="goFullScreen();">Go Fullscreen</button></p>
     </footer>
   </body>
 </html>
