--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             else if(canvas.mozRequestFullScreen)
                 canvas.mozRequestFullScreen();
       }
-      // function FullScreenHook(){
-      //   var canvas = document.getElementById("canvas");
-      //   canvas.width = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
-      //   canvas.height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
-      // }
+      function FullScreenHook(){
+        var canvas = document.getElementById("canvas");
+        canvas.width = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+        canvas.height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+      }
       var loadingContext = document.getElementById('loadingCanvas').getContext('2d');
       function drawLoadingText(text) {
         var canvas = loadingContext.canvas;
@@ -128,8 +128,8 @@
     </script>
     <script type="text/javascript" src="game.js"></script>
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
-    <!-- <footer>
+    <footer>
       <p><button onclick="goFullScreen();">Go Fullscreen</button></p>
-    </footer> -->
+    </footer>
   </body>
 </html>
