--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@
         bottom: 0;
         width: 100%;
       }
+
+      #canvas {
+        padding: 0;
+        border: 0px;
+      }
     </style>
   </head>
   <body>
     <center>
       <div>
-        <canvas id="canvas" style="visibility: hidden; position: absolute; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
-        <canvas id="loadingCanvas" style="position: absolute; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+        <canvas id="canvas" style="visibility: hidden; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+        <canvas id="loadingCanvas" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
       </div>
     </center>
 
