Add a manifest for web app testing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="Game.ico">
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Load custom style sheet -->
     <style>
