--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="Game.ico">
     <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="Game.ico">
 
     <!-- Load custom style sheet -->
     <style>
@@ -141,7 +142,9 @@
     <script type="text/javascript" src="game.js"></script>
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
     <footer>
-      <p><button onclick="goFullScreen();">Go Fullscreen</button></p>
+      if (navigator.userAgent.indexOf("iPhone") != -1) {
+        <p><button onclick="goFullScreen();">Go Fullscreen</button></p>
+      }
     </footer>
   </body>
 </html>
