Fix manifest name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="Game.ico">
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="Game.ico">
 
     <!-- Load custom style sheet -->
