--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <body>
     <center>
       <div>
-        <canvas id="canvas" style="visibility: hidden; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
         <canvas id="loadingCanvas" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+        <canvas id="canvas" style="visibility: hidden; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
       </div>
     </center>
 
@@ -141,7 +141,7 @@
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
 
     <footer>
-    <p><button id="fullscreen toggle" onclick="goFullScreen();" >Go Fullscreen</button> </p>
+    <p><button id="fullscreen toggle" onclick="FullScreenHook(); goFullScreen();" >Go Fullscreen</button> </p>
     </footer>
 
     <script>
