--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Galaxy Collection</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="icon-adaptive.svg">
+    <link rel="apple-touch-icon" href="icon-adaptive.svg">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="favicon.ico">
 
     <!-- Load custom style sheet -->
     <style>
