--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <script>
-      if(navigator.userAgent.match(/iPhone/i) != -1) {
-        document.write('<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" >/');
-      }
-    </script>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="favicon.ico">
+    <link rel="manifest" href="/manifest.json">
+
+    <script>
+      if(navigator.userAgent.match(/iPhone/i) != -1) {
+        document.write('<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" >/');
+      }
+    </script>
 
     <!-- Load custom style sheet -->
     <style>
