--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- for pre-iOS 11.3-->
 
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.ico"> <!-- for pre-iOS 15.4-->
     <link rel="manifest" href="/manifest.json">
 
     <script>
