Test adding a service worked for PWA installing

--- a/index.html
+++ b/index.html
@@ -154,5 +154,11 @@
         document.getElementById("fullscreen toggle").style.display = 'none';
       } 
     </script>
+
+    <script>
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js', { scope: '/' });
+      }
+    </script>
   </body>
 </html>
