--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="favicon.ico"> <!-- for pre-iOS 15.4-->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <script>
       if(navigator.userAgent.match(/iPhone/i) != -1) {
