--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <script>
       if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js', { scope: '/' });
+        navigator.serviceWorker.register('/sw.js', { scope: '/' });
       }
     </script>
   </body>
