Test getting sw from correct directory

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <script>
       if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js', { scope: '/Star-Wars-Galaxy-Collection-Web/' });
+        navigator.serviceWorker.register('/Star-Wars-Galaxy-Collection-Web/sw.js', { scope: '/Star-Wars-Galaxy-Collection-Web/' });
       }
     </script>
   </body>
