--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         document.write('<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" >/');
       }
     </script>
+    <script src = "consolewrapper.js"></script>
 
     <!-- Load custom style sheet -->
     <style>
@@ -49,12 +50,10 @@
     </style>
   </head>
   <body>
-    <center>
-      <div>
-        <canvas id="loadingCanvas" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
-        <canvas id="canvas" style="visibility: hidden; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
-      </div>
-    </center>
+    <div>
+      <canvas id="loadingCanvas" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+      <canvas id="canvas" style="visibility: hidden; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+    </div>
 
     <script type='text/javascript'>
       function goFullScreen(){
