Disable service workers until working properly

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
       } 
     </script>
 
-    <script>
+    <!-- <script>
       if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/Star-Wars-Galaxy-Collection-Web/sw.js', { scope: '/Star-Wars-Galaxy-Collection-Web/' });
       }
-    </script>
+    </script> -->
   </body>
 </html>
