--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         document.write('<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" >/');
       }
     </script>
-    <!-- <script src = "consolewrapper.js"></script> -->
+    <script src = "webdb.js"></script>
+    <script src = "consolewrapper.js"></script>
 
     <!-- Load custom style sheet -->
     <style>
