Add cross-origin response headers script and love.worker.js to try and fix Safari not working

--- a/index.html
+++ b/index.html
@@ -156,5 +156,6 @@
         navigator.serviceWorker.register('/Star-Wars-Galaxy-Collection-Web/sw.js', { scope: '/Star-Wars-Galaxy-Collection-Web/' });
       }
     </script> -->
+    <script src="coi-serviceworker.js"></script> <!--Script for setting cross-origin isolation headers where this can't be done via headers (Github pages)-->
   </body>
 </html>
