Test disabling persistent storage

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       }
     </script> -->
 
-    <script>
+    <!-- <script>
     if (navigator.storage && navigator.storage.persist) {
       navigator.storage.persist().then((persistent) => {
         if (persistent) {
@@ -167,6 +167,6 @@
         }
       });
     }
-  </script>
+  </script> -->
   </body>
 </html>
