--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <script>
       if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js', { scope: '/' });
+        navigator.serviceWorker.register('/Star-Wars-Galaxy-Collection-Web/sw.js', { scope: '/Star-Wars-Galaxy-Collection-Web/' });
       }
     </script>
 
