Re-enable service workers for offline functionality
Service Workers should update more reliably now as they return this.skipWaiting() so don't require a full page close/open to reload. I've also outputted to console when a new content is downloading.

Seems to be working as desired as per https://github.com/FormularSumo/Star-Wars-Galaxy-Collection/issues/72#issuecomment-2335192863

--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
       } 
     </script>
 
-    <!-- <script>
+    <script>
       if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('sw.js', { scope: '/' });
       }
-    </script> -->
+    </script>
 
     <script>
     if (navigator.storage && navigator.storage.persist) {
