Fix cache name + disable fullscreen button to test service worker

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
     }
     </script>
 
-    <footer>
+    <!-- <footer>
       <p><button id="fullscreen toggle" onclick="FullScreenHook(); goFullScreen();" >Go Fullscreen</button> </p>
-    </footer>
+    </footer> -->
   </body>
 </html>
