Move Icons and Screenshots into separate folder

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="mobile-web-app-capable" content="yes">
 
     <title>Galaxy Collection</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="apple-touch-icon" href="favicon.ico"> <!-- for pre-iOS 15.4-->
+    <link rel="icon" type="image/x-icon" href="Icons/favicon.ico">
+    <link rel="apple-touch-icon" href="Icons/favicon.ico"> <!-- for pre-iOS 15.4-->
     <link rel="manifest" href="manifest.json">
 
     <script>
