--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1">
 
     <title>Galaxy Collection</title>
     <link rel="icon" type="image/x-icon" href="Icons/favicon.ico">
     <link rel="apple-touch-icon" href="Icons/favicon.ico"> <!-- for pre-iOS 15.4-->
     <link rel="manifest" href="manifest.json">
 
-    <script>
+    <!-- <script>
       if(navigator.userAgent.match(/iPhone/i) != -1) {
         document.write('<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" >/');
       }
-    </script>
+    </script> -->
 
     <!-- Load custom style sheet -->
     <style>
@@ -43,13 +44,16 @@
 
       #canvas {
         padding: 0;
-        border: 0px;
+        display: none;
+        border: 0px none;
       }
     </style>
   </head>
   <body>
     <canvas id="loadingCanvas" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+    <!-- <div id="game"> -->
     <canvas id="canvas" style="visibility: hidden; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; display: block;" oncontextmenu="event.preventDefault()"></canvas>
+    <!-- </div> -->
 
     <script type='text/javascript'>
       function goFullScreen(){
@@ -140,7 +144,7 @@
     <script type="text/javascript" src="game.js"></script>
     <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
 
-    <script>
+    <!-- <script>
       function resizeCanvas() {
         const canvas = document.getElementById('canvas');
         const loadingCanvas = document.getElementById('loadingCanvas');
@@ -158,7 +162,7 @@
       }
       resizeCanvas();
       window.addEventListener('resize', resizeCanvas);
-    </script>
+    </script> -->
 
     <script>
       if (navigator.userAgent.indexOf("iPhone") != -1) {
