--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <script type='text/javascript'>
       function goFullScreen(){
         var canvas = document.getElementById("canvas");
-        if(document.body.requestFullscreen !== 'undefined')
+        if(document.body.requestFullscreen !== undefined)
           canvas.requestFullscreen();
-        else if(document.body.webkitRequestFullscreen !== 'undefined') //Up until Safari 16.4 (2023-03-27), and Chrome 71 (2018-12-04)
+        else if(document.body.webkitRequestFullscreen !== undefined) //Up until Safari 16.4 (2023-03-27), and Chrome 71 (2018-12-04)
           canvas.webkitRequestFullscreen();
-        else if(document.body.mozRequestFullScreen !== 'undefined') //Up until Firefox 64 (2018-12-11)
+        else if(document.body.mozRequestFullScreen !== undefined) //Up until Firefox 64 (2018-12-11)
           canvas.mozRequestFullScreen();
       }
       function FullScreenHook(){
@@ -194,7 +194,7 @@
     </footer>
 
     <script>
-      if (document.body.requestFullscreen == 'undefined' && document.body.webkitRequestFullscreen == 'undefined' && document.body.mozRequestFullScreen == 'undefined') {
+      if (document.body.requestFullscreen == undefined && document.body.webkitRequestFullscreen == undefined && document.body.mozRequestFullScreen == undefined ) {
         document.getElementById("fullscreen-toggle").remove(); //Remove fullscreenbutton on iOS where it's not supported..
       }
       console.log(document.body.requestFullscreen);
