Defer game.js so page can render while it's being downloaded.
Decreases time before initial loading screen and before game starts downloading

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
           Love(Module);
         }
       </script>
-      <script type="text/javascript" src="game.js"></script>
+      <script type="text/javascript" src="game.js" defer></script>
       <script async type="text/javascript" src="love.js" onload="applicationLoad(this)"></script>
 
       <script>
