--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <link rel="preload" href="game.data" as="fetch" crossorigin/>
 
       <meta name="mobile-web-app-capable" content="yes">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1">
