--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,17 @@
       <link rel="preload" href="game.data" as="fetch" crossorigin/>
 
       <meta name="mobile-web-app-capable" content="yes">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1">
 
       <title>Galaxy Collection</title>
       <link rel="icon" type="image/x-icon" href="Icons/favicon.ico">
       <link rel="apple-touch-icon" href="Icons/favicon.ico"> <!-- for pre-iOS 15.4-->
       <link rel="manifest" href="manifest.json">
 
-      <!-- <script>
+      <script>
         if(navigator.userAgent.match(/iPhone/i) != -1) {
           document.write('<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1, maximum-scale=1" >/');
         }
-      </script> -->
+      </script>
 
       <!-- Load custom style sheet -->
       <style>
