--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <!-- Load custom style sheet -->
       <style>
         body {
+          overflow: hidden;
           background-repeat: no-repeat;
           font-family: arial;
           margin: 0;
